[package]
name = "rust-url-shortener-shuttle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
nanoid = "0.4.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.148"
shuttle-service = { version = "0.11.0", features = ["web-rocket"] }
shuttle-shared-db = { version = "0.11.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
url = "2.3.1"
